make one method for get and update user
